tests/compile-fail/suzu_from_generic_enum_variant.rs
use suzunari_error::*;

#[suzunari_error]
enum GenericFromEnum<E: core::fmt::Debug + core::fmt::Display + 'static> {
    #[suzu(display("generic from enum"))]
    Variant {
        #[suzu(from)]
        source: E,
    },
}

fn main() {}
