tests/compile-fail/suzu_from_generic_enum_variant.stderr
error: `from` cannot be used on fields with generic type parameters; use a concrete type instead
 --> tests/compile-fail/suzu_from_generic_enum_variant.rs:7:16
  |
7 |         #[suzu(from)]
  |                ^^^^
